# Tally

./: .env.example  .gitignore  2026-07-17-171118-this-session-is-being-continued-from-a-previous-c.txt  CLAUDE.md  README.md  ingestion_blueprint.py  pyproject.toml
data/seeds/: me_pilot.yaml
db/: README.md  schema.sql  schema_additions.sql
db/migrations/: 0003_finance.sql  0004_fix_finance_views.sql  0005_votes.sql  0006_documents.sql  0007_extraction.sql  0008_extraction_rejects.sql  0009_promise_reviews.sql
db/sql/: candidacy_upsert.sql  candidate_totals_upsert.sql  committee_upsert.sql  crosswalk_lookup_fec_id.sql  crosswalk_upsert.sql  document_insert.sql  donation_upsert.sql  extraction_reject_insert.sql  industry_code_upsert.sql  media_asset_upsert.sql  politician_upsert_bioguide.sql  politician_upsert_fec.sql  promise_insert.sql  promise_review_upsert.sql  promises_delete_for_document.sql  race_upsert.sql  refresh_finance_views.sql  report_review_summary.sql  report_state_finance.sql  report_state_votes.sql  run_finish.sql  run_start.sql  (+15 more)
docs/: gpu-runbook.md  methodology.md
pipeline/: __init__.py  config.py  congress_api.py  db.py  fec_api.py  migrate.py  report.py  review_cli.py  senate_gov.py  verify.py  webdocs.py  workflows.py  youtube.py
scripts/: gpu_serve.sh
tests/: conftest.py  test_congress_votes.py  test_documents_schema.py  test_extract_promises.py  test_fec_itemized.py  test_finance_schema.py  test_loader_idempotency.py  test_migrate.py  test_review.py  test_senate_gov.py  test_sync_finance.py  test_verify.py  test_webdocs.py
(+15 files in other folders)
